Changelog:
==========

1.72.0 - 2012-??-??

    Regressions:
        - Fixed bug that occurred when using ShowDVDTitleDuration
        - Fixed bug that caused embedded subtitles to be displayed when subtitles are disabled
    Engines:
        - Removed option to automatically switch to tsMuxeR (available manually via the #--TRANSCODE--# folder)

1.71.0 - 2012-11-06

    Windows:
        - Updated MEncoder and MPlayer to SB41
        - Updated ffmpeg to 1.0 (Zeranoe Build 2012-10-10)
        - Fixed file permissions bug
    Mac OS X subtitles:
        - Changed audio/subtitle defaults to accept anything
        - Removed fontconfig from MEncoder for improved subs compatibility
    Renderers:
        - Improved Android.conf video support
        - Added support for Samsung SMT-G7400 (UPC Horizon)
        - Fixed bug that prevented Galaxy Nexus pictures displaying
    Language updates:
        - Updated Chinese Traditional translation (thanks, mcc!)
        - Added Turkish icon
    Misc:
        - Updated MediaInfo to 0.7.60 (GC1508)
        - Updated h2 database to 1.3.168 (thanks, valib!)
        - Improve handling of initialization errors
        - Fixed possible error while loading iPhoto library (GC1523)
        - Fixed bug where disabled engines could be selected in the #--TRANSCODE--# folder
        - Added options for renderer-specific file name formats
        - Added ffmpeg build script

1.70.1 - 2012-08-31

    Packaging fix (Windows only)

1.70.0 - 2012-08-31

    Add new default web video engine: FFMpeg Web Video
    Add support for new web protocols: mmsh:// and mmst://
    Sort files alphanumerically by default e.g. Episode 2 before Episode 10
    Auto encoding detection of non UTF-8 external subtitles for Russian, Greek, Hebrew, Chinese, Korean and Japanese languages (leave "Subtitles codepage" option blank)
    Improved handling of UTF-8 external subtitles
    Localized #--TRANSCODE--# folder name
    PMS.conf: